fixing alignment in resume page

--- a/src/Components/Layout/Content/Resume/Resume.module.css
+++ b/src/Components/Layout/Content/Resume/Resume.module.css
@@ -128,7 +128,7 @@
     min-width: 100%;
   }  
   .container {
-    width: 95% !important;
+    width: 90% !important;
     padding-right: 15px !important;
     padding-left: 15px !important;
     margin-right: auto !important;
